--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+numpy==1.23.5
+Pillow==9.5.0
+Pillow==9.5.0
+plotly==5.14.1
+Requests==2.30.0
+streamlit==1.22.0
+streamlit_lottie==0.0.3
+streamlit_option_menu==0.3.2
 tensorflow==2.11.1
-Streamlit==1.22.0
-python-multipart
-pillow
-matplotlib
-numpy
+tensorflow_intel==2.11.1
