--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ numpy
 Pillow
 python-multipart
 matplotlib
-plotly==5.14.1
-Requests==2.30.0
+plotly
+Request
 streamlit
-streamlit_lottie==0.0.3
-streamlit_option_menu==0.3.2
-tensorflow==2.11.1
-tensorflow_intel==2.11.1
+streamlit_lottie
+streamlit_option_menu
+tensorflow
+tensorflow_intel
